# catchers

./: .gitignore  Cargo.toml  Makefile  PUBLISHING.md  README.md  pyproject.toml  run.py  rust-toolchain.toml
.github/workflows/: publish_to_pypi.yml
catchers/: __init__.py
polars_catchers/: __init__.py
src/: catchers.rs  expressions.rs  lib.rs
src/feature_extraction/: basic_counts.rs  change.rs  correlation.rs  counts_ranges.rs  distribution.rs  dynamics.rs  energy_and_complexity.rs  entropy.rs  fourier.rs  linear_trend.rs  locations.rs  mod.rs  statistics.rs  stats_tests.rs  wavelets.rs
src/utils/: mod.rs
src/utils/stats/: basic.rs  histogram.rs  mod.rs  regression.rs  signal.rs  smoothing.rs
tests/: test_basic.py  test_pig_latinnify.py
