[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "ts-catchers"
description = "High-performance Polars extension for Catch22 time-series features"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Kevin Querino", email = "kevinsrq22@gmail.com" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dynamic = ["version"]
dependencies = ["polars>=1.6.2"]

[project.urls]
repository = "https://github.com/kevinsrq/catchers"

[tool.maturin]
module-name = "catchers._internal"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true
